[package]
name = "merge-pr"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/wireapp/merge-pr"
description = "Merge a PR with a linear history and commit signing"
license = "GPL-3.0-only"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
xshell = "0.2.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
